# jvm-toxcore-c

./: .cirrus.yml  .gitignore  .restyled.yaml  .travis.yml  AUTHORS.md  BUILD  BUILD.bazel  CMakeLists.txt  CONTRIBUTING.md  Makefile  Procfile  README.md  build.sbt  cspell.config.yaml  settings.gradle.kts
.github/: settings.yml
.github/workflows/: ci.yml  deploy.yml
buildscripts/: 00_dependencies_host  01_ndk  02_toolchain  03_dependencies_target  04_build  05_android  05_heroku  05_upload  06_upload  07_coverage  BuildScript.pm  C.pm  dependencies.pl  heroku  jenkins
buildscripts/android/: local.aarch64-linux-android.sbt  local.arm-linux-androideabi.sbt  local.x86_64-linux-android.sbt
buildscripts/patches/: c-toxcore.patch  libvpx.patch  protobuf.patch
cpp/: CMakeLists.txt  build.sbt
cpp/src/: Tox4j.cpp  cpp14compat.h
cpp/src/ToxAv/: Av.proto  ToxAv.h  av.cpp  debug.cpp  lifecycle.cpp
cpp/src/ToxCore/: Core.proto  ToxCore.cpp  ToxCore.h  clientinfo.cpp  connection.cpp  debug.cpp  friendlist.cpp  lifecycle.cpp
cpp/src/ToxCrypto/: ToxCrypto.cpp  ToxCrypto.h  debug.cpp  encryptsave.cpp  hash.cpp
cpp/src/tox/: common.h  core.h
cpp/src/tox4j/: Tox4j.h  ToxInstances.h
cpp/src/util/: ProtoLog.proto  debug_log.cpp  debug_log.h  logging.h  to_bytes.cpp  wrap_void.h
cpp/src/util/jni/: ArrayFromJava.cpp  ArrayToJava.h  Enum.h
cpp/test/util/: wrap_void_test.cpp
doc/: core-design.md  development.md  protocol.md
docker/: build-native  jvm.Dockerfile  native.Dockerfile
lib/: build.gradle.kts
lib/src/cpp/: CMakeLists.txt
lib/src/cpp/src/ToxCore/: ToxCore.cpp  ToxCore.h  lifecycle.cpp
lib/src/cpp/src/ToxCrypto/: encryptsave.cpp
lib/src/cpp/src/util/: exceptions.cpp  logging.h
lib/src/jvmMain/cpp/: CMakeLists.txt
lib/src/jvmMain/cpp/ToxAv/: ToxAv.h  lifecycle.cpp
lib/src/jvmMain/cpp/ToxCore/: ToxCore.h  connection.cpp  friendlist.cpp  lifecycle.cpp
lib/src/jvmMain/cpp/ToxCrypto/: ToxCrypto.h
lib/src/jvmMain/cpp/tox/: common.h
lib/src/jvmMain/cpp/tox4j/: Tox4j.h  ToxInstances.h
lib/src/jvmMain/cpp/util/: exceptions.cpp
lib/src/jvmMain/proto/: Core.proto
lib/src/main/cpp/: CMakeLists.txt  cpp14compat.h
lib/src/main/cpp/ToxAv/: Av.proto  ToxAv.cpp  av.cpp  lifecycle.cpp
lib/src/main/cpp/ToxCore/: Core.proto  ToxCore.h  connection.cpp  filetransfer.cpp  friendlist.cpp  interaction.cpp  lifecycle.cpp
lib/src/main/cpp/ToxCrypto/: ToxCrypto.cpp  encryptsave.cpp
lib/src/main/cpp/tox/: core.h
lib/src/main/cpp/tox4j/: ToxInstances.h
lib/src/main/cpp/util/: ProtoLog.proto  debug_log.cpp  debug_log.h  exceptions.h  instance_manager.h  to_bytes.h  wrap_void.h
lib/src/main/cpp/util/jni/: ArrayFromJava.h  UTFChars.cpp
lib/src/main/proto/: Av.proto  Core.proto  ProtoLog.proto
project/: plugins.sbt
projects/: .gitignore  build.sbt
projects/build-basic/: build.sbt  depends.sbt
projects/build-basic/project/: plugins.sbt
projects/build-extra/: build.sbt  depends.sbt
projects/linters/: build.sbt
projects/linters/project/: plugins.sbt
projects/linters/src/main/resources/: warts.properties
projects/macros/: build.sbt
projects/optimiser/: build.sbt
projects/optimiser/lib/: Makefile  README.md
projects/optimiser/project/: plugins.sbt
projects/project/: build.sbt  src
projects/sbt-plugins/: build.sbt  settings.sbt
projects/toktok/: README.md  build.gradle  build.sbt  gradlew  proguard-rules.pro
projects/toktok/gradle/wrapper/: gradle-wrapper.properties
projects/toktok/project/: android.sbt
projects/toktok/src/main/: AndroidManifest.xml
projects/toktok/src/main/res/anim/: fab_from_right.xml  fab_to_right.xml  slide_in_bottom.xml  slide_out_top.xml  sliding_in.xml
projects/toktok/src/main/res/drawable/: attach_rectangle_corners.xml  background_black_gradient.xml  background_black_opacity.xml  background_ripple.xml  background_transition.xml  background_transparent.xml  call_answer_button.xml  call_decline_button.xml  call_rect_lines.xml  cardboard_ripple.xml  drawer_item_selected_ripple.xml  gradient_contacts.xml  home_notification.xml  rectangle_corners.xml  simple_dialog_button.xml  status_background.xml  status_circle.xml  transition_background.xml
projects/toktok/src/main/res/layout/: activity_call_layout.xml  activity_files_send.xml  activity_main.xml  activity_main_fragment.xml  activity_message.xml  activity_message_group_members.xml  activity_new_message.xml  activity_profile.xml  activity_recall_message.xml  activity_reject_call.xml  activity_settings.xml  activity_toktok.xml  activity_video_call.xml  call_bottom_on_going.xml  call_bottom_receive.xml  call_item.xml  contacts_call.xml  (+51 more)
projects/tox4j/: .gitignore  Makefile  build.sbt
projects/tox4j/android/: libvpx.patch  local.aarch64-linux-android.sbt  local.i686-linux-android.sbt  protobuf.patch
projects/tox4j/project/: WartRemoverOverrides.scala  plugins.sbt
projects/tox4j/src/main/cpp/: Tox4j.cpp  libtox4j.ver  uncrustify.cfg
projects/tox4j/src/main/protobuf/: ClientProfile.proto  ProtoLog.proto
projects/tox4j/src/test/cpp/: main.cpp
projects/tox4j/src/test/java/: TestClient.scala
projects/tox4j/src/test/resources/: log4j.properties
projects/tox4j/tools/: proguard.txt
projects/tox4j/tools/toxsaves/: 2FE57DA347CD62431528DAAC5FBB290730FFF684AFC4CFC2ED90995F58CB3B74  Makefile
scripts/: Linux.mk  android.mk  build-aarch64-linux-android  build-android.sh  build-arm-linux-androideabi  build-armv7a-linux-androideabi  build-host  build-i686-linux-android  build-x86_64-linux-android  common.mk  dependencies.mk  release.mk
scripts/patches/: libvpx.patch
src/main/cpp/: cpp14compat.h
src/main/cpp/ToxAv/: ToxAv.cpp  ToxAv.h  debug.cpp
src/main/cpp/ToxCore/: ToxCore.h  connection.cpp  friendlist.cpp
src/main/cpp/ToxCrypto/: encryptsave.cpp
src/main/cpp/tox/: core.h
src/main/cpp/tox4j/: ToxInstances.h
src/main/cpp/util/: debug_log.h  exceptions.cpp
src/main/protobuf/: Av.proto  Core.proto
src/test/cpp/: CMakeLists.txt
src/test/cpp/util/: to_bytes_test.cpp
src/test/java/gnieh/pp/: Doc.scala  Renderer.scala  package.scala
(+1102 files in other folders)
